--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.3.0"
   },
   "peerDependencies": {
-    "stylelint": "^7.8.0"
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0"
   }
 }
