--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "stylelint-config-bigchaindb",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "For consistent CSS across BigchainDB, IPDB & ascribe's repos.",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "scripts": {
-    "test": "eslint . --ignore-path .gitignore"
+    "test": "eslint . --ignore-path .gitignore",
+    "release": "./node_modules/release-it/bin/release.js --src.tagName='v%s' --github.release --npm.publish --non-interactive",
+    "release-minor": "./node_modules/release-it/bin/release.js minor --src.tagName='v%s' --github.release --npm.publish --non-interactive",
+    "release-major": "./node_modules/release-it/bin/release.js major --src.tagName='v%s' --github.release --npm.publish --non-interactive"
   },
   "repository": {
     "type": "git",
@@ -26,7 +29,8 @@
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
     "eslint-config-ascribe": "^3.0.1",
-    "eslint-plugin-import": "^2.3.0"
+    "eslint-plugin-import": "^2.3.0",
+    "release-it": "^2.7.3"
   },
   "peerDependencies": {
     "stylelint": "^7.8.0",
