--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "homepage": "https://github.com/bigchaindb/stylelint-config-bigchaindb#readme",
   "devDependencies": {
-    "babel-eslint": "^10.0.0",
-    "eslint": "^5.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
     "eslint-config-ascribe": "^3.0.5",
-    "eslint-plugin-import": "^2.8.0",
-    "release-it": "^10.0.0",
-    "stylelint": "^10.0.0",
-    "stylelint-config-standard": "^18.1.0"
+    "eslint-plugin-import": "^2.17.2",
+    "release-it": "^10.4.4",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0"
   },
   "peerDependencies": {
-    "stylelint": "^9.1.0",
-    "stylelint-config-standard": "^18.1.0"
+    "stylelint": ">=9.1.0",
+    "stylelint-config-standard": ">=18.1.0"
   }
 }
